--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "axios": "^1.13.5",
+    "axios-cache-interceptor": "^1.11.4",
     "lucide-react": "^0.545.0",
+    "motion": "^12.34.0",
+    "pokenode-ts": "^1.20.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.7.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
