test: Pokémon listing feature (ML2)
it has one todo test, and when it's finished then all good

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vite build && tsc",
     "preview": "vite preview",
     "test": "vitest run",
+    "test:watch": "vitest run --watch",
+    "test:ui": "vitest --ui",
     "format": "biome format",
     "lint": "biome lint",
     "check": "biome check",
@@ -32,12 +34,14 @@
     "@biomejs/biome": "2.2.4",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
-    "jsdom": "^27.0.0",
+    "jsdom": "^27.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.2.4",
